Updated the index.html file and added app.js

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Toggle Color Exercise</title>
+	<style>
+		.orangeBackground {
+			background: orange;
+		}
+	</style>
 </head>
 <body>
+	<h1>Toggle Color Exercise</h1>
+	<p>This page has a single button that changes de color of body alternating from white to orange.</p>
+	<button>click me!</button>
+
+	<script type="text/javascript" src="app.js"></script>
 
 </body>
 </html>
